syntax = "proto3";

//below is the defined namespace you can find these files in when accessing them via client and server files
//we can extract these out if needed.

//having these protos in a shared project, requires the depdencies of
//Google.Protobuf
//GRPC
//gRPC.tools
option csharp_namespace = "Common.Models.Grpc.Protos";

package Member;

// The greeting service definition.
service MemberData {
  // Sends a greeting
  rpc GetMemberData (GetMemberRequest) returns (GetMemberResponse);
}

// The request message containing the user's name.
message GetMemberRequest {
  string memberId  = 1;
}

// The response message containing the greetings.
message GetMemberResponse {
  Member member = 1;
  int32 StatusCode = 2;
  bool GetSuccessful = 3;
}

message Member {
	string FirstName = 1;
	string Lastname = 2;
	string SSN = 3;
	string City = 4;
	string State = 5;
	string MemberId = 6;
	string Street = 7;
	int32 Age = 8;
	string Occupation = 9;
	int32 Salary = 10;
	string BloodType = 11;
	repeated Case Cases = 12;

}

message Case {
	string CaseId = 1;
	string Title = 2;
	string Subject = 3;

}
